--- a/html/pagina3.html
+++ b/html/pagina3.html
@@ -4,22 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto 1</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <title>Pagina 3</title>
+    <link rel="stylesheet" href="./css/pagina3.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <div class="dropdown">
+    <!-- <div class="dropdown">
         <button class="dropdown-btn">Dropdown</button>
         <div class="dropdown-content">
             <a href="index.html">Inicio</a>
             <a href="./html/carta.html">Carta</a>
             <a href="./html/pagina3.html">Página 3</a>
-        </div>
-    </div>
-    <div>holi</div>
-
+        </div> -->
+    <div>lolo</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
