--- a/html/carta.html
+++ b/html/carta.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <header id="titulo">
+        <h1 id="titulo">Amazing Cakes</h1>
+    </header>
     <!-- <div class="dropdown">
         <button class="dropdown-btn">Dropdown</button>
         <div class="dropdown-content">
