--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <a href="./html/pagina3.html">Página 3</a>
         </div>
     </div>
+    <header id="titulo">
+        <h1 id="titulo">Amazing Cakes</h1>
+    </header>
     <div>holi</div>
 
 
