añadiendo las plantillas nuevas

--- a/index.html
+++ b/index.html
@@ -10,17 +10,35 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <div class="dropdown">
-        <button class="dropdown-btn">Dropdown</button>
-        <div class="dropdown-content">
-            <a href="index.html">Inicio</a>
-            <a href="./html/carta.html">Carta</a>
-            <a href="./html/pagina3.html">Página 3</a>
-        </div>
-    </div>
-    <header id="titulo">
-        <h1 id="titulo">Amazing Cakes</h1>
+    <header class="sticky-top">
+        <div class="container-fluid p-0">
+            <nav class="navbar navbar-expand-lg bg-danger-subtle">
+                <div class="container-fluid">
+                    <a class="navbar-brand text-black" href="./index.html">Inicio</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active text-black" aria-current="page"
+                                    href="./html/carta.html">Carta</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-black" href="./html/contacto.html">Contacto</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-black" href="./html/nosotros.html">Sobre Nosotros</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            </div>
     </header>
+        <h1 id="titulo">Amazing Cakes</h1>
     <div>holi</div>
 
 
