añadiendo y corrigiendo html y css

--- a/html/carta.html
+++ b/html/carta.html
@@ -37,7 +37,7 @@
                     </div>
                 </div>
             </nav>
-            </div>
+        </div>
     </header>
     <h1 id="titulo">Amazing Cakes</h1>
     <!-- <div class="dropdown">
@@ -121,6 +121,13 @@
                     <p class="card-text">18$</p>
                 </div>
             </div>
+
+            <!--PIE DE PAGINA-->
+    <footer>
+        <div class="container-fluid sticky-top bg-success text-white">
+            <h1 class="m-0">Footer</h1>
+        </div>
+    </footer>
 
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
