--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -9,10 +9,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body>
     <!DOCTYPE html>
     <html lang="ca">
-    
+
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,7 +22,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
-    
+
     <body>
         <header class="sticky-top">
             <div class="container-fluid p-0">
@@ -49,12 +50,30 @@
                         </div>
                     </div>
                 </nav>
-                </div>
+            </div>
         </header>
         <h1 id="titulo">Amazing Cakes</h1>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-</body>
-</html>
+         <!--CUERPO DE LA PAGINA-->
+    <main class="vh-100">
+        <div class="container-fluid text-white">
+            <div class="row">
+                <div class="col-2 col-lg-4 bg-warning">SideBar</div>
+                <div class="col-10 col-lg-8 bg-danger">Main</div>
+            </div>
+        </div>
+    </main>
+
+    <!--PIE DE PAGINA-->
+    <footer>
+        <div class="container-fluid sticky-top bg-success text-white">
+            <h1 class="m-0">Footer</h1>
+        </div>
+    </footer>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+    </body>
+
+    </html>
