--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body>
     <header class="sticky-top">
         <div class="container-fluid p-0">
@@ -36,14 +37,23 @@
                     </div>
                 </div>
             </nav>
-            </div>
+        </div>
     </header>
-        <h1 id="titulo">Amazing Cakes</h1>
-    <div>holi</div>
+    <h1 id="titulo">Amazing Cakes</h1>
+     <!--CUERPO DE LA PAGINA-->
+     <main class="vh-100">
+        <div class="container-fluid text-white">
+            <div class="row">
+                <div class="col-2 col-lg-4 bg-warning">SideBar</div>
+                <div class="col-10 col-lg-8 bg-danger">Main</div>
+            </div>
+        </div>
+    </main>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
