--- a/html/carta.html
+++ b/html/carta.html
@@ -40,13 +40,6 @@
         </div>
     </header>
     <h1 id="titulo">Amazing Cakes</h1>
-    <!-- <div class="dropdown">
-        <button class="dropdown-btn">Dropdown</button>
-        <div class="dropdown-content">
-            <a href="index.html">Inicio</a>
-            <a href="./html/carta.html">Carta</a>
-            <a href="./html/pagina3.html">Página 3</a>
-        </div> -->
     <div class="container text-center mt-5">
         <div class="row gap-3 mb-3 border border-black d-flex justify-content-center">
             <div class="col-3 card 1">
@@ -55,6 +48,7 @@
                     class="card-img-top" alt="cheese">
                 <div class="card-body">
                     <p class="card-text">15$</p>
+                    <button type="submit" class="boton">Submit</button>
                 </div>
             </div>
             <div class="col-3 card 2">
@@ -63,6 +57,7 @@
                     class="card-img-top" alt="Carrot">
                 <div class="card-body">
                     <p class="card-text">20$</p>
+                    <button type="submit" class="boton">Submit</button>
                 </div>
             </div>
             <div class="col-3 card 3">
@@ -71,6 +66,7 @@
                     class="card-img-top" alt="Chocolate">
                 <div class="card-body">
                     <p class="card-text">18$</p>
+                    <button type="submit" class="boton">Submit</button>
                 </div>
             </div>
             <div class="col-3 card 4">
@@ -79,6 +75,7 @@
                     class="card-img-top" alt="Chocolate">
                 <div class="card-body">
                     <p class="card-text">18$</p>
+                    <button type="submit" class="boton">Submit</button>
                 </div>
             </div>
             <div class="col-3 card 5">
@@ -87,6 +84,7 @@
                     class="card-img-top" alt="Chocolate">
                 <div class="card-body">
                     <p class="card-text">18$</p>
+                    <button type="submit" class="boton">Submit</button>
                 </div>
             </div>
             <div class="col-3 card 6">
@@ -95,6 +93,7 @@
                     class="card-img-top" alt="Chocolate">
                 <div class="card-body">
                     <p class="card-text">18$</p>
+                    <button type="submit" class="boton">Submit</button>
                 </div>
             </div>
             <div class="col-3 card 7">
@@ -103,6 +102,7 @@
                     class="card-img-top" alt="Chocolate">
                 <div class="card-body">
                     <p class="card-text">18$</p>
+                    <button type="submit" class="boton">Submit</button>
                 </div>
             </div>
             <div class="col-3 card 8">
@@ -111,6 +111,7 @@
                     class="card-img-top" alt="Chocolate">
                 <div class="card-body">
                     <p class="card-text">18$</p>
+                    <button type="submit" class="boton">Submit</button>
                 </div>
             </div>
             <div class="col-3 card 9">
@@ -119,6 +120,7 @@
                     class="card-img-top" alt="Chocolate">
                 <div class="card-body">
                     <p class="card-text">18$</p>
+                    <button type="submit" class="boton">Submit</button>
                 </div>
             </div>
 
