--- a/html/carta.html
+++ b/html/carta.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carta</title>
+    <title>Menu</title>
     <link rel="stylesheet" href="../css/carta.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -15,7 +15,7 @@
         <div class="container-fluid p-0">
             <nav class="navbar navbar-expand-lg bg-danger-subtle">
                 <div class="container-fluid">
-                    <a class="navbar-brand text-black" href="/index.html">Inicio</a>
+                    <a class="navbar-brand text-black" href="/index.html">Home</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -25,13 +25,13 @@
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link active text-black" aria-current="page"
-                                    href="./html/carta.html">Carta</a>
+                                    href="./html/carta.html">Menu</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-black" href="/html/contacto.html">Contacto</a>
+                                <a class="nav-link text-black" href="/html/contacto.html">Contact</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-black" href="../html/nosotros.html">Sobre Nosotros</a>
+                                <a class="nav-link text-black" href="../html/nosotros.html">About Us</a>
                             </li>
                         </ul>
                     </div>
