--- a/html/contacto.html
+++ b/html/contacto.html
@@ -4,80 +4,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
-    <link rel="stylesheet" href="../css/pagina3.css" />
+    <title>Contact</title>
+    <link rel="stylesheet" href="../css/contacto.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
-    <!DOCTYPE html>
-    <html lang="ca">
-
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Contacto</title>
-        <link rel="stylesheet" href="../css/carta.css" />
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    </head>
-
-    <body >
-        <header class="sticky-top">
-            <div class="container-fluid p-0">
-                <nav class="navbar navbar-expand-lg bg-danger-subtle">
-                    <div class="container-fluid">
-                        <a class="navbar-brand text-black" href="/index.html">Inicio</a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                <li class="nav-item">
-                                    <a class="nav-link active text-black" aria-current="page"
-                                        href="/html/carta.html">Carta</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-black" href="/html/contacto.html">Contacto</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-black" href="/html/nosotros.html">Sobre Nosotros</a>
-                                </li>
-                            </ul>
-                        </div>
+    <header class="sticky-top">
+        <div class="container-fluid p-0">
+            <nav class="navbar navbar-expand-lg bg-danger-subtle">
+                <div class="container-fluid">
+                    <a class="navbar-brand text-black" href="/index.html">Home</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active text-black" aria-current="page"
+                                    href="/html/carta.html">Menu</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-black" href="/html/contacto.html">Contact</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-black" href="/html/nosotros.html">About Us</a>
+                            </li>
+                        </ul>
                     </div>
-                </nav>
-            </div>
-        </header>
-        <h1 id="titulo ">Amazing Cakes</h1>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <h1 id="titulo">Amazing Cakes</h1>
 
-        <!--CUERPO DE LA PAGINA-->
-        <form class=>
-            <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                <div id="emailHelp"></div>
-            </div>
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1">
-            </div>
-                <button type="submit" class="btn btn-success">Submit</button>
+    <!--CUERPO DE LA PAGINA-->
+    <div class="container">
+        <h2>Contact</h2>
+        <form action="#" method="post">
+            <label for="nombre">Name:</label>
+            <input type="text" id="nombre" name="nombre" required>
+            <label for="apellidos">Surname:</label>
+            <input type="text" id="apellidos" name="apellidos" required>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+            <label for="comentarios">Comments:</label>
+            <textarea id="comentarios" name="comentarios"></textarea>
+            <input type="submit" value="Aceptar">
+            <p>Thank you so much! We will contact you shortly.</p>
         </form>
+    </div>
+</body>
+</html>
 
-        <!--PIE DE PAGINA-->
-    <footer>
+    <!--PIE DE PAGINA-->
+    <!-- <footer>
         <div class="container-fluid sticky-top bg-success text-white">
             <h1 class="m-0">Footer</h1>
         </div>
-    </footer>
+    </footer> -->
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
-    </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
 
-    </html>
+</html>
