--- a/html/contacto.html
+++ b/html/contacto.html
@@ -51,6 +51,7 @@
             <input type="text" id="apellidos" name="apellidos" required>
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
+        </br>
             <label for="comentarios">Comments:</label>
             <textarea id="comentarios" name="comentarios"></textarea>
             <input type="submit" value="Aceptar">
@@ -61,11 +62,13 @@
 </html>
 
     <!--PIE DE PAGINA-->
-    <!-- <footer>
-        <div class="container-fluid sticky-top bg-success text-white">
-            <h1 class="m-0">Footer</h1>
-        </div>
-    </footer> -->
+    <footer>
+        <section>
+        <a href="/index.html">Home</a>
+        <a href="contacto.html">Contact us</a>
+        </section>
+        <p>Copyright 2024</p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
