--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -66,9 +66,11 @@
 
     <!--PIE DE PAGINA-->
     <footer>
-        <div class="container-fluid sticky-top bg-success text-white">
-            <h1 class="m-0">Footer</h1>
-        </div>
+        <section>
+        <a href="/index.html">Home</a>
+        <a href="contacto.html">Contact us</a>
+        </section>
+        <p>Copyright 2024</p>
     </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
