--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </header>
     <h1 id="titulo">Amazing Cakes</h1>
      <!--CUERPO DE LA PAGINA-->
-     <main class="vh-100">
+    <main class="vh-100">
         <div class="container-fluid text-white">
             <div class="row">
                 <div class="col-2 col-lg-4 bg-warning">SideBar</div>
@@ -49,6 +49,14 @@
             </div>
         </div>
     </main>
+
+    <footer>
+        <section>
+        <a href="/index.html">Home</a>
+        <a href="contacto.html">Contact us</a>
+        </section>
+        <p>Copyright 2024</p>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
