cambiando color titulo

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -39,11 +39,11 @@
             </nav>
         </div>
     </header>
-    <h1 id="titulo">Amazing Cakes</h1>
+    <h1 id="titulo" class="text-white">Amazing Cakes</h1>
 
     <!--CUERPO DE LA PAGINA-->
     <div class="container">
-        <h2>Contact</h2>
+        <h2>Contact us:</h2>
         <form action="#" method="post">
             <label for="nombre">Name:</label>
             <input type="text" id="nombre" name="nombre" required>
