--- a/html/carta.html
+++ b/html/carta.html
@@ -39,7 +39,7 @@
             </nav>
         </div>
     </header>
-    <h1 id="titulo">Amazing Cakes</h1>
+    <h1 id="titulo" class="text-white">Amazing Cakes</h1>
     <div class="container text-center mt-5">
         <div class="row gap-3 mb-3 border border-black d-flex justify-content-center">
             <div class="col-3 card 1">
