--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -52,7 +52,7 @@
                 </nav>
             </div>
         </header>
-        <h1 id="titulo">Amazing Cakes</h1>
+        <h1 id="titulo" class="text-white">Amazing Cakes</h1>
 
          <!--CUERPO DE LA PAGINA-->
     <main class="vh-100">
