--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </nav>
         </div>
     </header>
-    <h1 id="titulo">Amazing Cakes</h1>
+    <h1 id="titulo" class="text-white">Amazing Cakes</h1>
      <!--CUERPO DE LA PAGINA-->
     <main class="vh-100">
         <div class="container-fluid text-white">
