--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -54,24 +54,66 @@
         </header>
         <h1 id="titulo" class="text-white">Amazing Cakes</h1>
 
-         <!--CUERPO DE LA PAGINA-->
-    <main class="vh-100">
-        <div class="container-fluid text-white">
-            <div class="row">
-                <div class="col-2 col-lg-4 bg-warning">SideBar</div>
-                <div class="col-10 col-lg-8 bg-danger">Main</div>
+        <!--CUERPO DE LA PAGINA-->
+        <main class="vh-100">
+            <div class="row row-cols-1 row-cols-md-2 g-4">
+                <div class="col">
+                    <div class="card">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Amazing Cakes was founded in 2015 by Susan Smith, who has been
+                                passionate about baking since childhood. Anna started baking cakes in her kitchen,
+                                selling them to friends and family. Soon, her reputation for making the most delicious
+                                cakes delicious and beautiful spread and her small business grew quickly.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Over time, Amazing Cakes has become a renowned
+                                pastries throughout the region. Our commitment to quality, creativity and excellent customer service has made us
+                                permitted
+                                expand and open several branches in different cities.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Today, we remain dedicated to our passion for creating cakes
+                                exceptional for all types of
+                                occasions, from birthdays to weddings. We are grateful for the support of our
+                                clients to
+                                over the years and we hope to continue sweetening your lives with our incredible
+                                cakes.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-    </main>
-
-    <!--PIE DE PAGINA-->
-    <footer>
-        <section>
-        <a href="/index.html">Home</a>
-        <a href="contacto.html">Contact us</a>
-        </section>
-        <p>Copyright 2024</p>
-    </footer>
+        </main>
+        <footer>
+            <section>
+                <a href="/index.html">Home</a>
+                <a href="contacto.html">Contact us</a>
+            </section>
+            <p>Copyright 2024</p>
+        </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
