añadiendo imagenes home

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -30,9 +30,6 @@
                             <li class="nav-item">
                                 <a class="nav-link text-black" href="/html/contacto.html">Contact</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-black" href="/html/nosotros.html">About Us</a>
-                            </li>
                         </ul>
                     </div>
                 </div>
@@ -65,7 +62,7 @@
     <footer>
         <section>
         <a href="/index.html">Home</a>
-        <a href="contacto.html">Contact us</a>
+        <a href="/html/contacto.html">Contact us</a>
         </section>
         <p>Copyright 2024</p>
     </footer>
