--- a/index.html
+++ b/index.html
@@ -4,64 +4,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto 1</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <title>About Us</title>
+    <link rel="stylesheet" href="../css/nosotros.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
-    <header class="sticky-top">
-        <div class="container-fluid p-0">
-            <nav class="navbar navbar-expand-lg bg-danger-subtle">
-                <div class="container-fluid">
-                    <a class="navbar-brand text-black" href="./index.html">Home</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active text-black" aria-current="page"
-                                    href="./html/carta.html">Menu</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-black" href="./html/contacto.html">Contact</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-black" href="./html/nosotros.html">About us</a>
-                            </li>
-                        </ul>
+    <!DOCTYPE html>
+    <html lang="ca">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>About Uss</title>
+        <link rel="stylesheet" href="../css/carta.css" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    </head>
+
+    <body>
+        <header class="sticky-top">
+            <div class="container-fluid p-0">
+                <nav class="navbar navbar-expand-lg bg-danger-subtle">
+                    <div class="container-fluid">
+                        <a class="navbar-brand text-black" href="/index.html">Home</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a class="nav-link active text-black" aria-current="page"
+                                        href="/html/carta.html">Menu</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-black" href="/html/contacto.html">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        <h1 id="titulo" class="text-white">Amazing Cakes</h1>
+
+        <!--CUERPO DE LA PAGINA-->
+        <main class="vh-100">
+            <div class="row row-cols-1 row-cols-md-2 g-4">
+                <div class="col">
+                    <div class="card">
+                        <img src="https://res.cloudinary.com/gimmersta-wallpaper/image/upload/c_fill,f_auto,fl_progressive,q_auto,h_720/v1638276637/articles/R16861_product.jpg"
+                            class="card-img-top" alt="pasteleria">
+                        <div class="card-body">
+                            <h5 class="card-title text-center">History</h5>
+                            <p class="card-text">Amazing Cakes was founded in 2015 by Susan Smith, who has been
+                                passionate about baking since childhood. Anna started baking cakes in her kitchen,
+                                selling them to friends and family. Soon, her reputation for making the most delicious
+                                cakes delicious and beautiful spread and her small business grew quickly. Over time,
+                                Amazing Cakes has become a renowned
+                                pastries throughout the region. </p>
+                        </div>
                     </div>
                 </div>
-            </nav>
-        </div>
-    </header>
-    <h1 id="titulo" class="text-white">Amazing Cakes</h1>
-     <!--CUERPO DE LA PAGINA-->
-    <main class="vh-100">
-        <div class="container-fluid text-white">
-            <div class="row">
-                <div class="col-2 col-lg-4 bg-warning">SideBar</div>
-                <div class="col-10 col-lg-8 bg-danger">Main</div>
-            </div>
-        </div>
-    </main>
+                <div class="col">
+                    <div class="card">
+                        <img src="https://i.etsystatic.com/29247654/r/il/b54d62/3508464679/il_fullxfull.3508464679_tj86.jpg"
+                            class="card-img-top" alt="hoy">
+                        <div class="card-body">
+                            <h5 class="card-title text-center"">Today</h5>
+                            <p class=" card-text">Our commitment to quality, creativity and excellent customer service
+                                has made us
+                                permitted
+                                expand and open several branches in different cities. Today, we remain dedicated to our
+                                passion for creating cakes
+                                exceptional for all types of
+                                occasions, from birthdays to weddings. We are grateful for the support of our
+                                clients to
+                                over the years and we hope to continue sweetening your lives with our incredible
+                                cakes.</p>
+                        </div>
+                    </div>
+                </div>
+        </main>
+        <footer>
+            <section>
+                <a href="/index.html">Home</a>
+                <a href="/html/contacto.html">Contact us</a>
+            </section>
+            <p>Copyright 2024</p>
+        </footer>
 
-    <footer>
-        <section>
-        <a href="/index.html">Home</a>
-        <a href="contacto.html">Contact us</a>
-        </section>
-        <p>Copyright 2024</p>
-    </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+    </body>
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-</body>
-
-</html>
+    </html>
