corrigiendo errores ortograficos

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -51,7 +51,7 @@
         </br>
             <label for="comentarios">Comments:</label>
             <textarea id="comentarios" name="comentarios"></textarea>
-            <input type="submit" value="Aceptar">
+            <input type="submit" value="Submit">
             <p>Thank you so much! We will contact you shortly.</p>
         </form>
     </div>
