arreglando footer y font en algunos html

--- a/html/carta.html
+++ b/html/carta.html
@@ -37,6 +37,7 @@
         </div>
     </header>
     <h1 id="titulo" class="text-white">Amazing Cakes</h1>
+    <section>
     <div class="container text-center mt-5">
         <div class="row gap-3 mb-3 border border-black d-flex justify-content-center">
             <div class="col-3 card 1">
@@ -120,7 +121,7 @@
                     <button type="submit" class="boton">Submit</button>
                 </div>
             </div>
-
+        </section>
     <footer>
         <section>
             <a href="/index.html">Home</a>
