retocando cambios de color y texto

--- a/html/carta.html
+++ b/html/carta.html
@@ -36,7 +36,7 @@
             </nav>
         </div>
     </header>
-    <h1 id="titulo" class="text-white">Amazing Cakes</h1>
+    <h1 id="titulo">Amazing Cakes</h1>
     <section>
     <div class="container text-center mt-5">
         <div class="row gap-3 mb-3 border border-black d-flex justify-content-center">
