--- a/html/contacto.html
+++ b/html/contacto.html
@@ -36,7 +36,7 @@
             </nav>
         </div>
     </header>
-    <h1 id="titulo" class="text-white">Amazing Cakes</h1>
+    <h1 id="titulo">Amazing Cakes</h1>
 
     <!--CUERPO DE LA PAGINA-->
     <div class="container">
