retocando el agradecimiento del contact

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -52,7 +52,7 @@
             <label for="comentarios">Comments:</label>
             <textarea id="comentarios" name="comentarios"></textarea>
             <input type="submit" value="Submit">
-            <p>Thank you so much! We will contact you shortly.</p>
+            <p class="gracias">Thank you so much! We will contact you shortly.</p>
         </form>
     </div>
 </body>
