--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
     </header>
     <h1 id="titulo">Amazing Cakes</h1>
 
-    <!--CUERPO DE LA PAGINA-->
     <main class="vh-100">
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <div class="col">
@@ -63,19 +62,16 @@
                     <div class="card-body">
                         <h5 class="card-title text-center"">Today</h5>
                             <p class=" card-text">Our commitment to quality, creativity and excellent customer service
-                            has made us
-                            permitted
-                            expand and open several branches in different cities. Today, we remain dedicated to our
-                            passion for creating cakes
-                            exceptional for all types of
-                            occasions, from birthdays to weddings. We are grateful for the support of our
-                            clients to
-                            over the years and we hope to continue sweetening your lives with our incredible
-                            cakes.</p>
+                            has made us permitted expand and open several branches in different cities. 
+                            Today, we remain dedicated to our passion for creating cakes
+                            exceptional for all types of occasions, from birthdays to weddings. 
+                            We are grateful for the support of our clients to over the years and we hope to continue 
+                            sweetening your lives with our incredible cakes.</p>
                     </div>
                 </div>
             </div>
     </main>
+
     <footer>
         <section>
             <a href="/index.html">Home</a>
