--- a/html/carta.html
+++ b/html/carta.html
@@ -15,7 +15,7 @@
         <div class="container-fluid p-0">
             <nav class="navbar navbar-expand-lg bg-danger-subtle">
                 <div class="container-fluid">
-                    <a class="navbar-brand text-black" href="/index.html">Home</a>
+                    <a class="navbar-brand text-black" href="./index.html">Home</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
