arreglando problemas codigo en index html y css

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -47,20 +47,18 @@
             <input type="text" id="apellidos" name="apellidos" required>
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
-        </br>
+            <br>
             <label for="comentarios">Comments:</label>
             <textarea id="comentarios" name="comentarios"></textarea>
             <input type="submit" value="Submit">
             <p class="gracias">Thank you so much! We will contact you shortly.</p>
         </form>
     </div>
-</body>
-</html>
 
     <footer>
         <section>
-        <a href="/index.html">Home</a>
-        <a href="/html/contacto.html">Contact us</a>
+            <a href="../index.html">Home</a>
+            <a href="../html/contacto.html">Contact us</a>
         </section>
         <p>Copyright 2024</p>
     </footer>
