--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container-fluid p-0">
             <nav class="navbar navbar-expand-lg bg-danger-subtle">
                 <div class="container-fluid">
-                    <a class="navbar-brand text-black" href="/index.html">Home</a>
+                    <a class="navbar-brand text-black" href="./index.html">Home</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -25,10 +25,11 @@
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link active text-black" aria-current="page"
-                                    href="/html/carta.html">Menu</a>
+                                    href="./html/carta.html">Menu</a>
+
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-black" href="/html/contacto.html">Contact</a>
+                                <a class="nav-link text-black" href="./html/contacto.html">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -60,12 +61,12 @@
                     <img src="https://i.etsystatic.com/29247654/r/il/b54d62/3508464679/il_fullxfull.3508464679_tj86.jpg"
                         class="card-img-top" alt="hoy">
                     <div class="card-body">
-                        <h5 class="card-title text-center"">Today</h5>
-                            <p class=" card-text">Our commitment to quality, creativity and excellent customer service
-                            has made us permitted expand and open several branches in different cities. 
+                        <h5 class="card-title text-center">Today</h5>
+                        <p class=" card-text">Our commitment to quality, creativity and excellent customer service
+                            has made us permitted expand and open several branches in different cities.
                             Today, we remain dedicated to our passion for creating cakes
-                            exceptional for all types of occasions, from birthdays to weddings. 
-                            We are grateful for the support of our clients to over the years and we hope to continue 
+                            exceptional for all types of occasions, from birthdays to weddings.
+                            We are grateful for the support of our clients to over the years and we hope to continue
                             sweetening your lives with our incredible cakes.</p>
                     </div>
                 </div>
@@ -74,11 +75,13 @@
 
     <footer>
         <section>
-            <a href="/index.html">Home</a>
-            <a href="/html/contacto.html">Contact us</a>
+            <a href="./index.html">Home</a>
+            <a href="./html/contacto.html">Contact us</a>
         </section>
         <p>Copyright 2024</p>
     </footer>
+    
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
