--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header class="sticky-top">
+    <header class="sticky-top custom-header">
         <div class="container-fluid p-0">
             <nav class="navbar navbar-expand-lg bg-danger-subtle">
                 <div class="container-fluid">
