--- a/html/contacto.html
+++ b/html/contacto.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!-- Encabezado -->
     <header class="sticky-top">
         <div class="container-fluid p-0">
             <nav class="navbar navbar-expand-lg bg-danger-subtle">
@@ -36,8 +37,11 @@
             </nav>
         </div>
     </header>
+
+    <!-- Título -->
     <h1 id="titulo">Amazing Cakes</h1>
 
+    <!-- Contenido -->
     <div class="container">
         <h2>Contact us:</h2>
         <form action="#" method="post">
@@ -55,6 +59,7 @@
         </form>
     </div>
 
+    <!-- Pie de página -->
     <footer>
         <section>
             <a href="../index.html">Home</a>
@@ -63,6 +68,7 @@
         <p>Copyright 2024</p>
     </footer>
 
+    <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
