--- a/html/contacto.html
+++ b/html/contacto.html
@@ -16,7 +16,7 @@
         <div class="container-fluid p-0">
             <nav class="navbar navbar-expand-lg bg-danger-subtle">
                 <div class="container-fluid">
-                    <a class="navbar-brand text-black" href="/index.html">Home</a>
+                    <a class="navbar-brand text-black" href="home.html">Home</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -26,10 +26,10 @@
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link active text-black" aria-current="page"
-                                    href="/html/carta.html">Menu</a>
+                                    href="carta.html">Menu</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-black" href="/html/contacto.html">Contact</a>
+                                <a class="nav-link text-black" href="contacto.html">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -62,8 +62,8 @@
     <!-- Pie de página -->
     <footer>
         <section>
-            <a href="../index.html">Home</a>
-            <a href="../html/contacto.html">Contact us</a>
+            <a href="./home.html">Home</a>
+            <a href="./contacto.html">Contact us</a>
         </section>
         <p>Copyright 2024</p>
     </footer>
