--- a/html/home.html
+++ b/html/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -15,7 +15,7 @@
         <div class="container-fluid p-0">
             <nav class="navbar navbar-expand-lg bg-danger-subtle">
                 <div class="container-fluid">
-                    <a class="navbar-brand text-black" href="./index.html">Home</a>
+                    <a class="navbar-brand text-black" href="home.html">Home</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -25,11 +25,11 @@
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link active text-black" aria-current="page"
-                                    href="./html/carta.html">Menu</a>
+                                    href="carta.html">Menu</a>
 
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-black" href="./html/contacto.html">Contact</a>
+                                <a class="nav-link text-black" href="contacto.html">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -58,7 +58,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="https://i.etsystatic.com/29247654/r/il/b54d62/3508464679/il_fullxfull.3508464679_tj86.jpg"
+                    <img src="https://www.supercoloring.com/sites/default/files/styles/coloring_medium/public/cif/2021/02/desserts-doodle-coloring-page.jpg"
                         class="card-img-top" alt="hoy">
                     <div class="card-body">
                         <h5 class="card-title text-center">Today</h5>
@@ -75,7 +75,7 @@
 
     <footer>
         <section>
-            <a href="./index.html">Home</a>
+            <a href="./home.html">Home</a>
             <a href="./html/contacto.html">Contact us</a>
         </section>
         <p>Copyright 2024</p>
