--- a/html/home.html
+++ b/html/home.html
@@ -58,7 +58,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="https://www.supercoloring.com/sites/default/files/styles/coloring_medium/public/cif/2021/02/desserts-doodle-coloring-page.jpg"
+                    <img src="https://img.freepik.com/vector-premium/postres-dulces-pasteles-pasteles-galletas-sketch_8071-39998.jpg?w=2000"
                         class="card-img-top" alt="hoy">
                     <div class="card-body">
                         <h5 class="card-title text-center">Today</h5>
