--- a/html/carta.html
+++ b/html/carta.html
@@ -124,8 +124,8 @@
         </section>
         <footer>
             <section>
-                <a href="../home.html">Home</a>
-                <a href="../html/contacto.html">Contact us</a>
+                <a href="./home.html">Home</a>
+                <a href="./contacto.html">Contact us</a>
             </section>
             <p>Copyright 2024</p>
         </footer>
