--- a/html/home.html
+++ b/html/home.html
@@ -58,7 +58,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="https://img.freepik.com/vector-premium/postres-dulces-pasteles-pasteles-galletas-sketch_8071-39998.jpg?w=2000"
+                    <img src="https://static.vecteezy.com/system/resources/previews/005/211/251/original/black-and-white-candy-bar-cute-outline-birthday-meal-with-cake-candles-cupcakes-cake-pops-jelly-beans-flags-funny-dessert-illustration-for-card-poster-print-design-holiday-line-icons-vector.jpg"
                         class="card-img-top" alt="hoy">
                     <div class="card-body">
                         <h5 class="card-title text-center">Today</h5>
@@ -76,7 +76,7 @@
     <footer>
         <section>
             <a href="./home.html">Home</a>
-            <a href="./html/contacto.html">Contact us</a>
+            <a href="./contacto.html">Contact us</a>
         </section>
         <p>Copyright 2024</p>
     </footer>
