--- a/html/home.html
+++ b/html/home.html
@@ -24,8 +24,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active text-black" aria-current="page"
-                                    href="carta.html">Menu</a>
+                                <a class="nav-link active text-black" aria-current="page" href="carta.html">Menu</a>
 
                             </li>
                             <li class="nav-item">
@@ -80,7 +79,7 @@
         </section>
         <p>Copyright 2024</p>
     </footer>
-    
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
