--- a/html/home.html
+++ b/html/home.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-    <header class="sticky-top custom-header">
+    <header class="sticky-top">
         <div class="container-fluid p-0">
-            <nav class="navbar navbar-expand-lg bg-danger-subtle">
+            <nav class="navbar navbar-expand-lg custom-header">
                 <div class="container-fluid">
                     <a class="navbar-brand text-black" href="home.html">Home</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -42,12 +42,12 @@
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <div class="col">
                 <div class="card">
-                    <img src="https://res.cloudinary.com/gimmersta-wallpaper/image/upload/c_fill,f_auto,fl_progressive,q_auto,h_720/v1638276637/articles/R16861_product.jpg"
+                    <img src="https://res.cloudinary.com/gimmersta-wallpaper/image/upload/c_fill,f_auto,fl_progressive,q_auto,h_720/v1638276637/articles/R16861_product.jpg" width="500rem" height="581"
                         class="card-img-top" alt="pasteleria">
                     <div class="card-body">
                         <h5 class="card-title text-center">History</h5>
                         <p class="card-text">Amazing Cakes was founded in 2015 by Susan Smith, who has been
-                            passionate about baking since childhood. Anna started baking cakes in her kitchen,
+                            passionate about baking since childhood. Susan started baking cakes in her kitchen,
                             selling them to friends and family. Soon, her reputation for making the most delicious
                             cakes delicious and beautiful spread and her small business grew quickly. Over time,
                             Amazing Cakes has become a renowned
@@ -57,7 +57,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="https://static.vecteezy.com/system/resources/previews/005/211/251/original/black-and-white-candy-bar-cute-outline-birthday-meal-with-cake-candles-cupcakes-cake-pops-jelly-beans-flags-funny-dessert-illustration-for-card-poster-print-design-holiday-line-icons-vector.jpg"
+                    <img src="https://static.vecteezy.com/system/resources/previews/005/211/251/original/black-and-white-candy-bar-cute-outline-birthday-meal-with-cake-candles-cupcakes-cake-pops-jelly-beans-flags-funny-dessert-illustration-for-card-poster-print-design-holiday-line-icons-vector.jpg" width="500rem" height="581"
                         class="card-img-top" alt="hoy">
                     <div class="card-body">
                         <h5 class="card-title text-center">Today</h5>
