--- a/html/contacto.html
+++ b/html/contacto.html
@@ -13,7 +13,7 @@
 <body>
     <header class="sticky-top">
         <div class="container-fluid p-0">
-            <nav class="navbar navbar-expand-lg bg-danger-subtle">
+            <nav class="navbar navbar-expand-lg custom-header">
                 <div class="container-fluid">
                     <a class="navbar-brand text-black" href="home.html">Home</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
