--- a/html/home.html
+++ b/html/home.html
@@ -42,31 +42,42 @@
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <div class="col">
                 <div class="card">
-                    <img src="https://res.cloudinary.com/gimmersta-wallpaper/image/upload/c_fill,f_auto,fl_progressive,q_auto,h_720/v1638276637/articles/R16861_product.jpg" width="500rem" height="581"
-                        class="card-img-top" alt="pasteleria">
+                    <img src="https://res.cloudinary.com/gimmersta-wallpaper/image/upload/c_fill,f_auto,fl_progressive,q_auto,h_720/v1638276637/articles/R16861_product.jpg"
+                        width="500rem" height="581" class="card-img-top" alt="pasteleria">
                     <div class="card-body">
-                        <h5 class="card-title text-center">History</h5>
-                        <p class="card-text">Amazing Cakes was founded in 2015 by Susan Smith, who has been
-                            passionate about baking since childhood. Susan started baking cakes in her kitchen,
-                            selling them to friends and family. Soon, her reputation for making the most delicious
-                            cakes delicious and beautiful spread and her small business grew quickly. Over time,
-                            Amazing Cakes has become a renowned
-                            pastries throughout the region. </p>
+                        <h2 class="card-title text-center">History</h2>
+                        <p class="card-text">Amazing Cakes' success is not just attributed to Susan's baking skills but
+                            also to her unwavering commitment to quality and customer satisfaction. With each cake
+                            meticulously crafted, using only the finest ingredients, customers can taste the love and
+                            dedication in every bite. Susan's creativity knows no bounds, as she continually experiments
+                            with new flavors and designs to delight her customers. As demand for Amazing Cakes continues
+                            to soar, Susan has expanded her team, ensuring that every cake maintains the same level of
+                            excellence that has become synonymous with the brand. From weddings to birthdays, every
+                            occasion is made sweeter with an Amazing Cake centerpiece. In addition to its local success,
+                            Amazing Cakes has also gained recognition on social media platforms, with customers from far
+                            and wide eager to taste Susan's creations. The company has garnered a loyal following, with
+                            customers returning time and again to experience the magic of an Amazing Cake. </p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="https://static.vecteezy.com/system/resources/previews/005/211/251/original/black-and-white-candy-bar-cute-outline-birthday-meal-with-cake-candles-cupcakes-cake-pops-jelly-beans-flags-funny-dessert-illustration-for-card-poster-print-design-holiday-line-icons-vector.jpg" width="500rem" height="581"
-                        class="card-img-top" alt="hoy">
+                    <img src="https://static.vecteezy.com/system/resources/previews/005/211/251/original/black-and-white-candy-bar-cute-outline-birthday-meal-with-cake-candles-cupcakes-cake-pops-jelly-beans-flags-funny-dessert-illustration-for-card-poster-print-design-holiday-line-icons-vector.jpg"
+                        width="500rem" height="581" class="card-img-top" alt="hoy">
                     <div class="card-body">
-                        <h5 class="card-title text-center">Today</h5>
-                        <p class=" card-text">Our commitment to quality, creativity and excellent customer service
-                            has made us permitted expand and open several branches in different cities.
-                            Today, we remain dedicated to our passion for creating cakes
-                            exceptional for all types of occasions, from birthdays to weddings.
-                            We are grateful for the support of our clients to over the years and we hope to continue
-                            sweetening your lives with our incredible cakes.</p>
+                        <h2 class="card-title text-center">Today</h2>
+                        <p class=" card-text">The expansion of Amazing Cakes into multiple cities has been a testament
+                            to the trust and loyalty of our customers, who have embraced our brand wherever we go. Each
+                            new branch is carefully curated to reflect the same warmth and charm that customers have
+                            come to expect, ensuring that no matter where they are, they feel right at home. Our team of
+                            talented bakers and decorators undergo rigorous training to uphold the standards of
+                            excellence that have defined Amazing Cakes since its inception. With each new location, we
+                            strive to become an integral part of the community, participating in local events and
+                            celebrations. Our dedication to innovation means that we are constantly pushing the
+                            boundaries of what is possible in cake design, offering unique and unforgettable creations
+                            that leave a lasting impression. As we look to the future, we remain committed to our core
+                            values of quality, creativity, and customer service, confident that with the continued
+                            support of our loyal customers, the sky is the limit for Amazing Cakes.</p>
                     </div>
                 </div>
             </div>
