se han areglado las rutas y el cambio de carpetas

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -15,7 +15,7 @@
         <div class="container-fluid p-0">
             <nav class="navbar navbar-expand-lg custom-header">
                 <div class="container-fluid">
-                    <a class="navbar-brand text-black" href="home.html">Home</a>
+                    <a class="navbar-brand text-black" href="../index.html">Home</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -25,10 +25,10 @@
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link active text-black" aria-current="page"
-                                    href="carta.html">Menu</a>
+                                    href="./carta.html">Menu</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-black" href="contacto.html">Contact</a>
+                                <a class="nav-link text-black" href="./contacto.html">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -58,7 +58,7 @@
 
     <footer>
         <section>
-            <a href="./home.html">Home</a>
+            <a href="../index.html">Home</a>
             <a href="./contacto.html">Contact us</a>
         </section>
         <p>Copyright 2024</p>
