--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -15,7 +15,7 @@
         <div class="container-fluid p-0">
             <nav class="navbar navbar-expand-lg custom-header">
                 <div class="container-fluid">
-                    <a class="navbar-brand text-black" href="home.html">Home</a>
+                    <a class="navbar-brand text-black" href="./index.html">Home</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -24,11 +24,10 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active text-black" aria-current="page" href="carta.html">Menu</a>
-
+                                <a class="nav-link active text-black" aria-current="page" href="./html/carta.html">Menu</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-black" href="contacto.html">Contact</a>
+                                <a class="nav-link text-black" href="./html/contacto.html">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -81,17 +80,16 @@
                     </div>
                 </div>
             </div>
+        </div>
     </main>
 
     <footer>
         <section>
-            <a href="./home.html">Home</a>
-            <a href="./contacto.html">Contact us</a>
+            <a href="./index.html">Home</a>
+            <a href="./html/contacto.html">Contact us</a>
         </section>
         <p>Copyright 2024</p>
     </footer>
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
