cambiando imagenes de home y arreglando scroll

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <div class="col">
                 <div class="card">
-                    <img src="https://res.cloudinary.com/gimmersta-wallpaper/image/upload/c_fill,f_auto,fl_progressive,q_auto,h_720/v1638276637/articles/R16861_product.jpg"
+                    <img src="./img/pastisserie.jpg"
                         width="500rem" height="581" class="card-img-top" alt="pasteleria">
                     <div class="card-body">
                         <h2 class="card-title text-center">History</h2>
@@ -61,7 +61,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="https://static.vecteezy.com/system/resources/previews/005/211/251/original/black-and-white-candy-bar-cute-outline-birthday-meal-with-cake-candles-cupcakes-cake-pops-jelly-beans-flags-funny-dessert-illustration-for-card-poster-print-design-holiday-line-icons-vector.jpg"
+                    <img src=".//img/patisserie.jpg"
                         width="500rem" height="581" class="card-img-top" alt="hoy">
                     <div class="card-body">
                         <h2 class="card-title text-center">Today</h2>
@@ -75,8 +75,7 @@
                             celebrations. Our dedication to innovation means that we are constantly pushing the
                             boundaries of what is possible in cake design, offering unique and unforgettable creations
                             that leave a lasting impression. As we look to the future, we remain committed to our core
-                            values of quality, creativity, and customer service, confident that with the continued
-                            support of our loyal customers, the sky is the limit for Amazing Cakes.</p>
+                            values of quality, creativity, and customer service, the sky is the limit for Amazing Cakes.</p>
                     </div>
                 </div>
             </div>
